--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="div">
-        <button onclick="alert('Hola!')">Saludar</button>
+        <button onclick="event.stopPropagation(); alert('Hola!')">Saludar</button>
     </div>
 </body>
 </html>
